# api-gateway

./: Makefile  README.md  docker-compose-dev.yml  docker-compose-local.yml  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.yml  mypy.ini  pyproject.toml  sonar-project.properties
CI-templates/: deploy-template-dev.yml  deploy-template-prod.yml  deploy-template-test.yml  pre-merge-tests-template.yml
account/: admin.py  models.py  urls.py
account/helpers/: enums.py  utils.py
account/migrations/: 0001_initial.py  0002_currencyrate_image.py  0003_currencyrate_currency_name.py  0004_atm.py  0005_alter_atm_options.py  0006_alter_currencyrate_buy_alter_currencyrate_sell.py
account/serializers/: accounts_serializer.py  atm_serializer.py  currency_rate_serializer.py  serializers.py  transactions_serializer.py
account/views/: account_view.py  atm_view.py  currency_rate_view.py  example_view.py  transaction_view.py
app/: settings.py  urls.py
app/celery/: celery.py  tasks.py
auth_user/: urls.py  utils.py
auth_user/serializers/: auth_serializer.py  notification_serializer.py  token_serializer.py
auth_user/services/: registration_service.py
auth_user/views/: __init__.py  auth.py  registration.py
card/: urls.py
card/helpers/: enums.py  utils.py
card/views/: card_view.py  (+1 more)
docker/: Dockerfile.py-api-gateway  Dockerfile.py-celery  Dockerfile.py-celery-beat  Dockerfile.py-consumer
kafka_core/: consumer.py  handlers.py  producer.py
loan/: urls.py
tests/: conftest.py
user/: admin.py  apps.py  managers.py  models.py  urls.py  utils.py
(+39 files in other folders)
